projectbolt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projectbolt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: projectbolt
  template:
    metadata:
      labels:
        app: projectbolt
    spec:
      containers:
      - name: projectbolt-container
        image: projectbolt:1.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: projectbolt-service
spec:
  selector:
    app: projectbolt
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: NodePort
